tests/specs/type_import_type.txt
# mod.ts
export function adopt<T>(p: import("./module.ts").Pet<T>) { }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function adopt<T>(p: import("./module.ts").Pet<T>) { }
  | ^

# output.txt
Defined in file:///mod.ts:1:1

function adopt<T>(p: import("./module.ts").Pet<T>): void


# output.json
[
  {
    "kind": "function",
    "name": "adopt",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [
        {
          "kind": "identifier",
          "name": "p",
          "optional": false,
          "tsType": {
            "repr": "",
            "kind": "importType",
            "importType": {
              "specifier": "./module.ts",
              "qualifier": "Pet",
              "typeParams": [
                {
                  "repr": "T",
                  "kind": "typeRef",
                  "typeRef": {
                    "typeParams": null,
                    "typeName": "T"
                  }
                }
              ]
            }
          }
        }
      ],
      "returnType": {
        "repr": "void",
        "kind": "keyword",
        "keyword": "void"
      },
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": [
        {
          "name": "T"
        }
      ]
    }
  }
]
